--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ config.properties
 *.png
 *.jpg
 *.mp4
+
+/** linguist-vendored
+*.html linguist-vendored
+*.css linguist-vendored
+*.js linguist-vendored
